--- a/app/package.json
+++ b/app/package.json
@@ -6,7 +6,8 @@
   "dependencies": {
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "mongodb": "^3.5.7"
+    "mongodb": "^3.5.7",
+    "mongoose": "^5.9.12"
   },
   "devDependencies": {
     "concurrently": "^5.2.0",
