--- a/app/client/package.json
+++ b/app/client/package.json
@@ -9,12 +9,14 @@
     "aws-amplify": "^3.0.10",
     "aws-sdk": "^2.673.0",
     "http-proxy-middleware": "^1.0.3",
+    "play-sound": "^1.1.3",
     "react": "^16.13.1",
     "react-bootstrap": "^0.33.1",
     "react-dom": "^16.13.1",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "socket.io-client": "^2.3.0"
   },
   "proxy": "http://localhost:5000/api/",
   "scripts": {
